<resources>
    <string name="app_name">Microblogging App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mail_hint">Mail</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="age_hint">Age</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register_now">Register now</string>

    <string name="add_post">Add post</string>

    <string name="nav_all_posts">All posts</string>
    <string name="nav_home">Home</string>
    <string name="nav_add">Add</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>

    <string name="this_is_your_profile">This is your profile!</string>

    <string name="registered_successfully">Registered successfully</string>
    <string name="not_all_fieds_are_filled">Not all required fields are filled</string>
    <string name="wrong_number_input">Wrong number input</string>

    <string name="overload_error">You have exceed maximum symbol count per post</string>
    <string name="successfully_added">Post was successfully added</string>

    <string name="empty_list">Error occurred or nothing found</string>
    <string name="nothing_to_load">Nothing to load more</string>
</resources>
