<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/add"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/nav_add"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/nav_logout"/>
    </group>

</menu>
