<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_mail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/surname_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_surname"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="numberDecimal"/>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editText_surname"
        android:layout_alignStart="@id/editText_surname"
        android:layout_below="@id/editText_age"
        android:layout_marginEnd="-17dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_gender"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"/>
</RelativeLayout>
